test_case/rust-lang_rust/56113_443323695_16.rs
\n\nFor more information on the rust ownership system, take a look at\nhttps://doc.rust-lang.org/stable/book/references-and-borrowing.html.\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/rfc-2005-default-binding-mode/borrowck-issue-49631.rs","byte_start":916,"byte_end":928,"line_start":30,"line_end":30,"column_start":9,"column_end":21,"is_primary":true,"text":[{"text":"        foo.mutate();","highlight_start":9,"highlight_end":21}],"label":"mutable borrow occurs here","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/rfc-2005-default-binding-mode/borrowck-issue-49631.rs","byte_start":896,"byte_end":899,"line_start":29,"line_end":29,"column_start":34,"column_end":37,"is_primary":false,"text":[{"text":"    while let Some(Ok(string)) = foo.get() {","highlight_start":34,"highlight_end":37}],"label":"immutable borrow occurs here","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/rfc-2005-default-binding-mode/borrowck-issue-49631.rs","byte_start":1009,"byte_end":1016,"line_start":32,"line_end":32,"column_start":30,"column_end":37,"is_primary":false,"text":[{"text":"        println!(\"foo={:?}\", *string);","highlight_start":30,"highlight_end":37}],"label":"immutable borrow later used here","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error[E0502]: cannot borrow `foo` as mutable because it is also borrowed as immutable\n  --> /checkout/src/test/ui/rfc-2005-default-binding-mode/borrowck-issue-49631.rs:30:9\n   |\nLL |     while let Some(Ok(string)) = foo.get() {\n   |                                  --- immutable borrow occurs here\nLL |         foo.mutate();\n   |         ^^^^^^^^^^^^ mutable borrow occurs here\nLL |         //~^ ERROR cannot borrow `foo` as mutable\nLL |         println!(\"foo={:?}\", *string);\n   |                              ------- immutable borrow later used here\n\n"}
[00:56:19] {"message":"aborting due to previous error","code":null,"level":"error","spans":[],"children":[],"rendered":"error: aborting due to pre-linux-gnu/stage2/bin/rustc" "/checkout/src/test/ui/span/regions-escape-loop-via-variable.rs" "--target=x86_64-unknown-linux-gnu" "--error-format" "json" "-Zui-testing" "-C" "prefer-dynamic" "-o" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/span/regions-escape-loop-via-variable.nll/a" "-Zborrowck=migrate" "-Ztwo-phase-borrows" "-Crpath" "-O" "-Zunstable-options" "-Lnative=/checkout/obj/build/x86_64-unknown-linux-gnu/native/rust-test-helpers" "-L" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/span/regions-escape-loop-via-variable.nll/auxiliary" "-A" "unused"
[00:56:19] ------------------------------------------
[00:56:19] 
[00:56:19] ------------------------------------------
[00:56:19] stderr:
[00:56:19] stderr:
[00:56:19] ------------------------------------------
[00:56:19] {"message":"`x` does not live long enough","code":{"code":"E0597","explanation":"\nThis error occurs because a borrow was made inside a variable which has a\ngreater lifetime than the borrowed one.\n\nExample of erroneous code:\n\n